--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,20 @@ button {
     margin-left: 30px;
     margin-top: 10px;
 }
+
+#message-display {
+    position: absolute;
+    z-index: 150;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 30vh;
+    width: 100vw;
+    text-align: center;
+    background-color: rgba(50, 110, 255, 0.9);
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+    line-height: 30vh;
+    display: none;
+}
